--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: priogridtools
-Title: What the Package Does (one line, title case)
+Title: Simple utilities to work with PRIOgrid data and IDs
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Mihai", "Croicu", email = "mihai.croicu@pcr.uu.se", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.4.0)
-License: What license is it under?
+Depends: R (>= 3.3.0)
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
